# QDiscord

./: CMakeLists.txt
src/core/Discord/: Client.cpp  Client.h
src/core/Discord/Objects/: GuildMember.cpp  User.cpp  User.h
